# jacks-menu

./: .coverage  .gitignore  404.html  Makefile  README.md  contributing.html  getting_started.html  implementation.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  test.yaml
reference/: main.html
search/: search_index.json
site/: 404.html  contributing.html  getting_started.html  index.html  objects.inv
site/reference/: main.html
site/search/: search_index.json
src/jacks_menu/: __init__.py  _download.py  constants.py  export.py  main.py  menu.py  parser.py  website.py
tests/: test_export.py  test_parser.py
