[project]
name = "jacks-menu"
version = "0.1.0"
description = "A tool to scrape the Jack's Gelato menu"
readme = "README.md"
authors = [
    { name = "EdmundGoodman", email = "egoodman3141@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "selenium-wire>=5.1.0",
    "selenium>=4.27.1",
    "blinker==1.7.0",
    "gdown>=5.2.0",
    "setuptools>=75.6.0",
    "python-dateutil>=2.9.0.post0",
    "click>=8.1.7",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed"
]
license = "MIT"
repository = "https://github.com/EdmundGoodman/jacks-gelato"
url = "https://edmundgoodman.github.io/jacks-gelato"

[project.scripts]
jacks-menu = "jacks_menu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "vulture>=2.14",
]
#    "cohesion>=1.1.0",
#    "coverage>=7.6.1",
#    "deptry>=0.20.0",
#    "hypothesis>=6.112.2",
#    #"mike>=1.1.2",
#    "mkdocs-material>=9.5.39",
#    "mkdocstrings[python]>=0.26.1",
#    "monkeytype>=23.3.0",
#    "mypy>=1.11.2",
#    "pre-commit-hooks>=4.6.0",
#    "pre-commit>=3.8.0",
#    "pytest-lazy-fixtures>=1.1.1",
#    "pytest>=8.3.3",
#    "radon>=6.0.1",
#    "vulture>=2.12",